tdf#168422 - Fix SUMPRODUCT calculation is broken in some cases

Double refs with operators only trimmable in case of one root paramater.

Follow up of: 969ddf72824942be9755a8d14482d6549a2231ce

regression after commit: 969ddf72824942be9755a8d14482d6549a2231ce

Change-Id: I87365efc5b7bc54bfdda4d33e4b5b9550d6e2602
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191365
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>